# ugc_sprint_2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.etl.yml  docker-compose.yml  pyproject.toml
.github/workflows/: code_checker.yml
docs/: TASKS.md
docs/ugc/: c4_ugc_container.puml  ugc_sequence.puml
elk/: .env.example  docker-compose.yml
elk/deploy/: filebeat.yml  logstash.conf
etl_analytics/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
etl_analytics/src/: config.py  main.py
etl_analytics/src/helpers/: extractor.py  loader.py
etl_analytics/src/models/: base.py  events.py  favorites.py  grades.py  reviews.py
etl_analytics/src/services/: events.py  favorites.py  grades.py  reviews.py
nginx/: nginx.conf
src/etl_analytics/: Dockerfile  config.py  main.py
src/etl_analytics/helpers/: extractor.py  loader.py
src/etl_analytics/models/: events.py
src/ugs/: Dockerfile  app.py  main.py
src/ugs/api/v1/: events.py
src/ugs/brokers/: kafka.py
src/ugs/core/: init.py
src/ugs/core/cache/: abstract.py  redis.py
src/ugs/core/configs/: redis.py
src/ugs/core/utils/: psycopg.py  sqlalchemy.py
src/ugs/helpers/: check_token.py
src/ugs/models/: events.py
src/ugs/services/: handlers.py
src/ugs/static/api/v1/: openapi.yaml
storage_compare/: .env.example  clickhouse.py  clickhouse_tester.py  comaprison.md  config.py  mongo_inserter.py  postgres_inserter.py  postgres_reader.py  requirements.txt  service.py  storage_comparison.md  vertica.py  vertica_tester.py
storage_compare/mongo/: docker-compose.yml  mongo_inserter.py  mongo_reader.py  service.py  utils.py
storages_compare/: .env.example  config.py  data_generator.py  docker-compose.yml  mongo_reader.py  requirements.txt  schemas.py  storage_comparison.md  utils.py
tests/http/: event-api.http
ugc/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
ugc/docs/: ugc_sequence.puml
ugc/src/: app.py
ugc/src/api/v1/: events.py  favorites.py  grades.py  reviews.py
ugc/src/brokers/: base.py  init.py  kafka.py  kafka_init.py
ugc/src/core/: config.py  exceptions.py  init.py
ugc/src/db/: collections.py  mongo.py  repositories.py
ugc/src/helpers/: check_token.py
ugc/src/models/: auth.py  events.py  favorites.py  grades.py  reviews.py
ugc/src/services/: favorites.py  grades.py  handlers.py
ugc/src/static/api/v1/: openapi.yaml
ugc/tests/http/: favorite-api.http  grade-api.http  http-client.env.json  review-api.http  review-grade-api.http
