[tool.poetry]
name = "ugc"
version = "0.1.0"
description = ""
authors = ["vladmeh <vladmeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.0.3"}
kafka-python = "^2.0.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
flask-swagger-ui = "^4.11.1"
gunicorn = "^22.0.0"
gevent = "^24.2.1"
pyjwt = "^2.8.0"
beanie = "^1.26.0"
fast-depends = "^2.4.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
exclude = [
    "docs",
    "tests",
    "static",
    "*/logger.py"
]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle
    "ERA",  # eradicate
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "T10",  # flake8-debugger
    "W",  # pycodestyle
]
ignore = [
    "B904",
    "N818",
    "B008",
]

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
exclude = [
    "docs",
    "tests",
    "static"
]